# truficultura

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  babel.cfg  docker-compose.yml  fly.toml  plan-test-planes.md  pyproject.toml  runbook-migracion-trufiq.md
.claude/: settings.local.json
.github/: copilot-instructions.md
alembic/: env.py
app/: auth.py  config.py  database.py  help_videos.py  i18n.py  jinja.py  main.py  observability.py  plan_access.py  utils.py
docker/: entrypoint.sh
locales/: messages.pot
monitoring/: README.md  external-observability-plan.md  fly-managed-grafana.md  truficultura-overview-dashboard.json
scripts/: clear_tenant_data.py  fill_translations.py  fly_enable_observability.sh  import_rainfall_cron.py  process_notifications_cron.py  process_recurring_expenses_cron.py  proxy-dev-db.sh  seed_full_demo.py  seed_truffle_demo_data.py
tests/: conftest.py  test_admin.py  test_admin_router.py  test_assistant_router.py  test_auth.py  test_auth_router.py  test_billing_router.py  test_brule_router.py  test_config.py  test_expenses_router.py  test_exports_router.py  test_help_router.py  test_imports_router.py  test_incident_model.py  test_incidents_router.py  test_incomes_router.py  test_irrigation_router.py  test_landing_contact.py  test_lluvia_router.py  test_maps_router.py  test_notifications_router.py  test_observability.py  test_onboarding_router.py  test_plants_router.py  test_plot_analytics_router.py  test_plot_events_router.py  test_plots_router.py  test_profile_router.py  test_scan_router.py  (+6 more)
(+378 files in other folders)
