[project]
name = "truficultura"
version = "0.1.0"
description = "Gestión de explotación trufícola"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2.1",
    "greenlet>=3.3.2",
    "debugpy>=1.8.20",
    "babel>=2.18.0",
    "passlib[argon2]>=1.7.4",
    "itsdangerous>=2.1.0",
    "aiosmtplib>=3.0.0",
    "qrcode[pil]>=8.2",
    "fpdf2>=2.8.7",
    "httpx>=0.27.0",
    "stripe>=10.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
skip_empty = true
show_missing = true

[tool.pytest.ini_options]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=82"
